# semantic-tool-use

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-ontology-server.sh
ontology/domain/idea-pool/: idea-pool.ttl
ontology/domain/idea-pool/shapes/: idea-shapes.ttl
ontology/domain/visual-artifacts/: README.md  code-ontology.ttl  composition-patterns.ttl  composition-shapes.ttl  diagram-domain.ttl  intent-mapping.ttl  isaqb-ontology.ttl  phase-ontology.ttl  prd-ontology.ttl  presentation-domain.ttl  social-media-domain.ttl  visual-artifacts-core.ttl  visualization-theory.ttl
ontology/domain/visual-artifacts/examples/: carousel-example.ttl  presentation-example.ttl
ontology/domain/visual-artifacts/shapes/: composition-shapes.ttl
ontology/shapes/: idea-shapes.ttl  owl-shapes.ttl
service/: install.sh
service/launchd/: org.semantic-tool-use.ontology-server.plist
service/systemd/: ontology-server.service
src/: __init__.py  pyproject.toml
src/knowledge_graph/: __init__.py  __main__.py  mcp_server.py  migration.py  verify_migration.py  verify_success_criteria.py
src/knowledge_graph/core/: __init__.py  ideas.py  lifecycle.py  llm.py  memory.py  search.py  seeds.py  store.py  wikidata.py
src/knowledge_graph/tests/: __init__.py  test_knowledge_graph.py
src/ontology_server/: README.md  __main__.py  auth.py  config.py  setup_auth.py
src/ontology_server/api/: app.py
src/ontology_server/core/: __init__.py  store.py  validation.py
src/ontology_server/dashboard/: __init__.py  routes.py  services.py
src/ontology_server/dashboard/static/: style.css
src/ontology_server/dashboard/templates/: base.html  generic_detail.html  idea_detail.html  phase_detail.html  phase_trail.html  prd_detail.html  project_detail.html  requirement_detail.html
src/ontology_server/dashboard/templates/partials/: _breadcrumbs.html
src/ontology_server/mcp/: __init__.py  server.py
src/ontology_server/shapes/: ontology-metadata-shapes.ttl
src/ontology_server/tests/: __init__.py  test_store.py  test_validation.py
tests/: conftest.py  test_auth.py  test_mcp_tools.py  test_store.py  test_validation.py
tests/api/: test_kg_update.py  test_validate.py
tests/dashboard/: test_resolve_route.py  test_services.py  test_short_uri.py
tests/fixtures/: sample.ttl
work/idea-74-planning-20260205-060605/docs/: annotation-coverage-queries.md  annotation-data-model.md  arch-view-data-requirements.md  arch-view-template-requirements.md
