[project]
name = "semantic-tool-use"
version = "0.1.0"
description = "Semantic Tool Use for Neosymbolic AI Research"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pyoxigraph>=0.3",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]
llm = [
    "anthropic>=0.25",
]
http = [
    "uvicorn[standard]>=0.27",
    "fastapi>=0.110",
]
all = [
    "semantic-tool-use[search,llm,http]",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
