[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-tool-use"
version = "0.1.0"
description = "Ontology server and knowledge graph backend for semantic AI tool orchestration"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Hans-Peter Zorn", email = "hpz@zorns.org" },
]
dependencies = [
    "rdflib>=7.0",
    "pyoxigraph>=0.3",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]
llm = [
    "anthropic>=0.25",
]
http = [
    "uvicorn[standard]>=0.27",
    "fastapi>=0.110",
]
all = [
    "semantic-tool-use[search,llm,http]",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
